# twitch-chat-archive

./: .gitignore  README.md  pyproject.toml
twa/: __init__.py  config.py  db.py  run_debug.py
twa/static/css/: styles.css
twa/templates/: base.html.jinja2  index.html.jinja2
twa/views/main/: __init__.py  routes.py
